@@ -1,5 +1,10 @@
 2005-09-02  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
+	PR c++/22233
+	* g++.dg/template/param1.C: New test.
+
+2005-09-02  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
 	Backport:
 
 	2004-11-25  Mark Mitchell  <mark@codesourcery.com>
